adjust z-index on the home page, and make sure the header does not cover the whole page

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -49,9 +45,7 @@ code {
   background: #555;
 }
 
-/* Home page */
 /* Header */
-
 .header-container {
   display: flex;
 }
@@ -77,6 +71,7 @@ code {
   margin-left: auto;
   margin-right: 10px;
   align-items: center;
+  z-index: 10;
 }
 
 .youtube-logo-homePage {
@@ -95,10 +90,62 @@ code {
   margin-left: 10px;
 }
 
-
 .header_forgotPassword, .header_about, .header_investor {
   color: white;
   margin: 0px 10px 0px 0px;
+}
+
+/* Home Page */
+
+.login-btn_1, .signup-btn_1 {
+  padding: 10px;
+  margin-right: 8px;
+  border-radius: 10px;
+  border-width: 3px;
+  width: 130px;
+  color: white;
+  font-size: 16px;
+  background-color: rgb(244 114 182);
+  cursor: pointer;
+  z-index: 59;
+}
+
+.login-btn_2, .signup-btn_2 {
+  padding: 10px;
+  margin-right: 8px;
+  border-radius: 10px;
+  border-width: 3px;
+  width: 130px;
+  color: white;
+  font-size: 16px;
+  background-color: rgb(14 165 233);
+  cursor: pointer;
+  
+}
+  
+@media (max-width: 1024px) {
+  .home-img {
+    width: 250px;
+  }
+
+  .home-btn-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .login-btn {
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
+
+  .signup-btn {
+    margin-top: 5px;
+    margin-left: 0px;
+    margin-right: 5px;
+  }
+
+  .home-heading {
+    font-size: 43px;
+  }
 }
 
 
@@ -125,45 +172,12 @@ code {
   display: inline-block;
 }
 
-@media (max-width: 1024px) {
-  .home-img {
-    width: 250px;
-  }
-
-  .home-btn-container {
-    display: flex;
-    flex-direction: column;
-  }
-  .login-btn {
-    margin-right: 5px;
-    margin-bottom: 5px;
-  }
-
-  .signup-btn {
-    margin-top: 5px;
-    margin-left: 0px;
-    margin-right: 5px;
-  }
-
-  .home-heading {
-    font-size: 43px;
-  }
-}
-
 .sticky-footer {
   position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
 }
-
-/* .about-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
-} */
 
 .parallax {
   overflow: hidden;
@@ -186,21 +200,22 @@ code {
 
 .primary-header, .hero {
   --parallax-speed: 10;
-  z-index: 6;
+  z-index: 1;
 }
 
-.main-header {
+.homePage-header {
   --parallax-speed: 0;
-  z-index: 99;
+  z-index: 2;
+  max-height: 60px;
 }
 
 .hero {
-  z-index: 50;
+  z-index: 1;
 }
 
 .parallax_bg {
   --parallax-speed: 0;
-  z-index: -50;
+  z-index: -1;
   min-height: 100%;
   width: 100%;
   object-fit: cover;
@@ -208,22 +223,22 @@ code {
 
 .parallax_dust {
   --parallax-speed: -10;
-  z-index: -2;
+  z-index: 0;
 }
 
 .parallax_luna {
   --parallax-speed: 4;
-  z-index: 4;
+  z-index: 0;
 }
 
 .parallax_manny {
   --parallax-speed: 6;
-  z-index: 2;
+  z-index: 0;
 }
 
 .parallax_jax {
   --parallax-speed: 5;
-  z-index: 2;
+  z-index: 0;
 }
 
 .parallax_rays {
@@ -233,7 +248,7 @@ code {
 
 .parallax_foreground-front,
 .parallax_foreground-back {
-  z-index: 5;
+  z-index: 0;
   align-self: end;
 }
 
@@ -252,7 +267,7 @@ code {
 
 .main-content {
   position: relative;
-  z-index: 99;
+  z-index: 0;
   background: hsl(238, 100%, 6%);
 }
 
@@ -263,7 +278,7 @@ code {
 
 .primary-header {
   padding-block: 2rem;
-  z-index: 99
+  z-index: -1
 }
 
 .primary-header_inner {
